--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -36,8 +36,8 @@ story_location: "_bmad-output/implementation-artifacts"
 development_status:
   # Epic 1: Walking Skeleton & User Access
   epic-1: in-progress
-  1-1-project-initialization-walking-skeleton: review
-  1-2-database-migration-system: backlog
+  1-1-project-initialization-walking-skeleton: done
+  1-2-database-migration-system: review
   1-3-user-registration-api: backlog
   1-4-session-authentication: backlog
   1-5-frontend-auth-foundation: backlog
