--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -38,8 +38,8 @@ development_status:
   epic-1: in-progress
   1-1-project-initialization-walking-skeleton: done
   1-2-database-migration-system: done
-  1-3-user-registration-api: review
-  1-4-session-authentication: backlog
+  1-3-user-registration-api: done
+  1-4-session-authentication: review
   1-5-frontend-auth-foundation: backlog
   epic-1-retrospective: optional
 
