--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -39,8 +39,8 @@ development_status:
   1-1-project-initialization-walking-skeleton: done
   1-2-database-migration-system: done
   1-3-user-registration-api: done
-  1-4-session-authentication: review
-  1-5-frontend-auth-foundation: backlog
+  1-4-session-authentication: done
+  1-5-frontend-auth-foundation: review
   epic-1-retrospective: optional
 
   # Epic 2: Feed Core Engine
