--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -35,17 +35,17 @@ story_location: "_bmad-output/implementation-artifacts"
 
 development_status:
   # Epic 1: Walking Skeleton & User Access
-  epic-1: in-progress
+  epic-1: done
   1-1-project-initialization-walking-skeleton: done
   1-2-database-migration-system: done
   1-3-user-registration-api: done
   1-4-session-authentication: done
-  1-5-frontend-auth-foundation: review
+  1-5-frontend-auth-foundation: done
   epic-1-retrospective: optional
 
   # Epic 2: Feed Core Engine
-  epic-2: backlog
-  2-1-feed-model-add-feed-by-url: backlog
+  epic-2: in-progress
+  2-1-feed-model-add-feed-by-url: review
   2-2-feed-metadata-auto-discovery: backlog
   2-3-opml-import: backlog
   2-4-feed-management-crud: backlog
