--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,11 +13,15 @@ services:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080/health"]
+      test: [ "CMD", "wget", "-q", "--spider", "http://localhost:8080/health" ]
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 10s
+    deploy:
+      resources:
+        limits:
+          memory: 64M
 
   db:
     image: postgres:16-alpine
@@ -31,16 +35,17 @@ services:
       - "5432:5432"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U flowreader -d flowreader"]
+      test: [ "CMD-SHELL", "pg_isready -U flowreader -d flowreader" ]
       interval: 5s
       timeout: 5s
       retries: 5
     # RAM Optimization (from Architecture NFR1)
     command: >
-      postgres
-      -c shared_buffers=24MB
-      -c max_connections=20
-      -c work_mem=2MB
+      postgres -c shared_buffers=24MB -c max_connections=20 -c work_mem=2MB
+    deploy:
+      resources:
+        limits:
+          memory: 80M
 
 volumes:
   postgres_data:
