feat(web): overhaul frontend Paper Dark, migration Tailwind v4 et composants magazine

--- a/_bmad-output/planning-artifacts/bmm-workflow-status.yaml
+++ b/_bmad-output/planning-artifacts/bmm-workflow-status.yaml
@@ -1,2 +1,3 @@
 workflow_status:
   create-architecture: c:\Users\Michael\VSCODE\FlowReader\_bmad-output\planning-artifacts\architecture.md
+  create-ux-design: c:\Users\Michael\VSCODE\FlowReader\_bmad-output\planning-artifacts\ux-design-specification.md
