--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
     "react-swipeable": "^7.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
