--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-musl": "^4.2.0",
-    "lightningcss-linux-x64-musl": "^1.27.0"
+    "lightningcss-linux-x64-musl": "^1.27.0",
+    "@tailwindcss/oxide-linux-x64-musl": "^4.0.0"
   }
 }
